--- a/src/Stan_Sampling.ipynb
+++ b/src/Stan_Sampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -208,7 +208,10 @@
     "                     'np.power(Popularity, 2)',\n",
     "                     'log(Agent_Previous_Citations_to_Class+1)',\n",
     "                     'log(Agent_Productivity_Patents)',\n",
-    "                     'log(CoAgent_Previous_Patent_Count_in_Class+1)']\n",
+    "                     'log(CoAgent_Previous_Patent_Count_in_Class+1)',\n",
+    "                     'Guided',\n",
+    "                     'log(N_Agents)'\n",
+    "                    ]\n",
     "formula = \" + \".join(formula_variables)\n",
     "models_store['%s/formula_variables'%hdf_label] = pd.Series(formula_variables)\n",
     "\n",
@@ -231,38 +234,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model = 'joint_counts_sampling_model'\n",
+    "hdf_label = 'joint_counts'\n",
+    "formula_variables = ['Relatedness',\n",
+    "                     'np.power(Relatedness, 2)',\n",
+    "                     'Popularity',\n",
+    "                     'np.power(Popularity, 2)',\n",
+    "                     'log(Agent_Previous_Citations_to_Class+1)',\n",
+    "                     'log(Agent_Productivity_Patents)',\n",
+    "                     'log(CoAgent_Previous_Patent_Count_in_Class+1)',\n",
+    "                     'Guided',\n",
+    "                     'log(N_Agents)'\n",
+    "                    ]\n",
+    "formula = \" + \".join(formula_variables)\n",
+    "models_store['%s/formula_variables'%hdf_label] = pd.Series(formula_variables)\n",
+    "\n",
+    "\n",
+    "\n",
+    "baselines = [count_variable+'_Mean_for_Year_and_Class_of_New_Immigrants_to_Class' for count_variable in count_variables]\n",
+    "predictors = dmatrix(formula, entries.ix[ind])\n",
+    "stan_data = {'y': asarray(entries.ix[ind, count_variables].astype('int')).T,\n",
+    "             'x': asarray(predictors),\n",
+    "             'M': len(count_variables),\n",
+    "             'N': N,\n",
+    "             'K': predictors.shape[1],\n",
+    "             'baseline': asarray(entries.ix[ind,baselines]).T\n",
+    "         }\n",
+    "\n",
+    "data_file = 'joint_counts_data_{0}.stan'.format(n_observations)\n",
+    "stan_rdump(stan_data, model_directory+data_file)\n",
+    "submit_cmdstan_jobs(model,data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "model = 'hits_sampling_model'\n",
-    "hdf_label = 'hits'\n",
+    "# model = 'hits_sampling_model'\n",
+    "# hdf_label = 'hits'\n",
     "\n",
-    "formula_variables = ['Relatedness',\n",
-    "                     'np.power(Relatedness, 2)',\n",
-    "                     'np.power(Relatedness, 3)',                     \n",
-    "                     'Popularity',\n",
-    "                     'np.power(Popularity, 2)',\n",
-    "                     'log(Agent_Previous_Citations_to_Class+1)',\n",
-    "                     'log(Agent_Productivity_Patents)',\n",
-    "                     'log(CoAgent_Previous_Patent_Count_in_Class+1)']\n",
-    "formula = \" + \".join(formula_variables)\n",
+    "# formula_variables = ['Relatedness',\n",
+    "#                      'np.power(Relatedness, 2)',\n",
+    "#                      'np.power(Relatedness, 3)',                     \n",
+    "#                      'Popularity',\n",
+    "#                      'np.power(Popularity, 2)',\n",
+    "#                      'log(Agent_Previous_Citations_to_Class+1)',\n",
+    "#                      'log(Agent_Productivity_Patents)',\n",
+    "#                      'log(CoAgent_Previous_Patent_Count_in_Class+1)',\n",
+    "#                      'Guided',\n",
+    "#                      'log(N_Agents)'                    \n",
+    "#                     ]\n",
+    "# formula = \" + \".join(formula_variables)\n",
     "\n",
-    "models_store['%s/formula_variables'%hdf_label] = pd.Series(formula_variables)\n",
+    "# models_store['%s/formula_variables'%hdf_label] = pd.Series(formula_variables)\n",
     "\n",
-    "for threshold in hit_thresholds:\n",
-    "    predictors = dmatrix(formula, entries.ix[ind])\n",
-    "    stan_data = {'y': asarray(entries.ix[ind, 'Citations_Hit_%i'%threshold]),\n",
-    "                 'x': asarray(predictors),\n",
-    "                 'N': N,\n",
-    "                 'K': predictors.shape[1],\n",
-    "             }\n",
+    "# for threshold in hit_thresholds:\n",
+    "#     predictors = dmatrix(formula, entries.ix[ind])\n",
+    "#     stan_data = {'y': asarray(entries.ix[ind, 'Citations_Hit_%i'%threshold]),\n",
+    "#                  'x': asarray(predictors),\n",
+    "#                  'N': N,\n",
+    "#                  'K': predictors.shape[1],\n",
+    "#              }\n",
     "            \n",
-    "    data_file = 'hits_data_thr_{0}_{1}.stan'.format(threshold, n_observations)\n",
-    "    stan_rdump(stan_data, model_directory+data_file)\n",
-    "    submit_cmdstan_jobs(model,data_file)"
+    "#     data_file = 'hits_data_thr_{0}_{1}.stan'.format(threshold, n_observations)\n",
+    "#     stan_rdump(stan_data, model_directory+data_file)\n",
+    "#     submit_cmdstan_jobs(model,data_file)"
    ]
   },
   {
@@ -278,8 +324,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
