--- a/src/Calculating_Performance_Data.ipynb
+++ b/src/Calculating_Performance_Data.ipynb
@@ -357,7 +357,8 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -462,6 +463,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_authors = patent_data['Patent'].value_counts()\n",
+    "entries['N_Agents'] = n_authors.ix[entries['Patent']].values\n",
+    "\n",
+    "n_new_authors = entries['Patent'].value_counts()\n",
+    "entries['N_New_Agents'] = n_new_authors.ix[entries['Patent']].values\n",
+    "\n",
+    "entries['Guided'] = entries['N_New_Agents']!=entries['N_Agents']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {
     "collapsed": true
@@ -475,8 +493,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
