--- a/src/Calculating_Synthetic_Networks_Integrate_Runs.ipynb
+++ b/src/Calculating_Synthetic_Networks_Integrate_Runs.ipynb
@@ -503,11 +503,12 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "css": [
    ""
   ],
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
