--- a/src/Manuscript_Figures.ipynb
+++ b/src/Manuscript_Figures.ipynb
@@ -3921,7 +3921,7 @@
     "            all_info.append(i+label)\n",
     "    class_description = class_data.set_index('IPC4').ix[class_of_interest, 'Description']\n",
     "    print(class_of_interest, class_description)\n",
-    "    matched_case_studies.ix[ind, all_info].to_csv(figures_directory+'PNAS_case_studies_%s_%s.csv'%(class_description, class_of_interest))"
+    "    matched_case_studies.ix[ind, all_info].to_csv(figures_directory+'case_studies_%s_%s.csv'%(class_description, class_of_interest))"
    ]
   },
   {
